Re #19 trying a few things. Switching to APA style solves it, see References for how that chagnes things

--- a/library.bib
+++ b/library.bib
@@ -1073,7 +1073,7 @@ url = {http://papers.nips.cc/paper/4902-information-theoretic-lower-bounds-for-d
 }
 
 @Article{abowdschmutteBPEA2015,
-  author    = {John M. Abowd and Ian M. Schmutte},
+  author    = {John M. Abowd and Schmutte, Ian M.},
   title     = {Economic analysis and statistical disclosure limitation},
   journal   = {Brookings Papers on Economic Activity},
   year      = {2015},
@@ -1081,9 +1081,6 @@ url = {http://papers.nips.cc/paper/4902-information-theoretic-lower-bounds-for-d
   note      = {Spring},
   doi       = {10.1353/eca.2016.0004},
   keywords  = {Statistical Disclosure Limitation, SDL, primary},
-  owner     = {John Abowd},
-  timestamp = {2016.07.08},
-  url       = {http://www.brookings.edu/~/media/Projects/BPEA/Spring-2015-Revised/AbowdText.pdf?la=en},
 }
 
 @Article{Abraham2005,
@@ -4063,7 +4060,7 @@ url="https://doi.org/10.1007/978-1-4757-3575-8_9"
 %%%% ERROR
 
 @techreport{Varian1998,
-  author    = {Varian, Hal R},
+  author    = {Varian, Hal R.},
   title     = {{Markets for Information Goods}},
   month   = oct,
   year      = {1998},
@@ -5753,13 +5750,14 @@ url="https://doi.org/10.1007/978-1-4757-3575-8_9"
 }
 
 @Article{AbowdSchmutte:Privacy:AER,
-  author   = {John M. Abowd and Ian M. Schmutte},
+  author   = {John M. Abowd and Schmutte, Ian M. },
   title    = {An Economic Analysis of Privacy Protection and Statistical Accuracy as Social Choices},
   journal  = {American Economic Review},
   year     = {2019},
   volume   = {109},
   number   = {1},
   pages    = {171-202},
+  doi = {10.1257/aer.20170627},
   abstract = {Statistical agencies face a dual mandate to publish accurate statistics while protecting respondent privacy. Increasing privacy protection requires decreased accuracy. Recognizing this as a resource allocation problem, we propose an economic solution: operate where the marginal cost of increasing privacy equals the marginal benefit. Our model of production, from computer science, assumes data are published using an efficient differentially private algorithm. Optimal choice weighs the demand for accurate statistics against the demand for privacy. Examples from U.S.\ statistical programs show how our framework can guide decision-making. Further progress requires a better understanding of willingness-to-pay for privacy and statistical accuracy.},
   keywords = {Economics of Privacy, Formal Privacy, Statistical Disclosure Limitation, primary, background},
 }
