--- a/index.Rmd
+++ b/index.Rmd
@@ -7,6 +7,7 @@ github-repo: labordynamicsinstitute/privacy-bibliography
 documentclass: article
 bibliography: [primary_dynamic.bib]
 link-citations: true
+csl: apa.csl
 ---
 ```{r create bib,echo=FALSE}
 source("create_primary.R",echo=TRUE)
