Fixed the DOI=N/A problem Re #7

--- a/library.bib
+++ b/library.bib
@@ -98,7 +98,7 @@ eprint = {
   title    = {Differential Privacy: A Primer for a Non-Technical Audience},
   journal  = {Privacy Law Scholars Conference 2017},
   year     = {2018},
-  doi      = {N/A},
+  
   keywords = {formal privacy, background, primary},
   url      = {https://openscholar.mit.edu/sites/default/files/dept/files/nissim_et_al_-_differential_privacy_primer_for_non-technical_audiences_1.pdf},
 }
@@ -118,9 +118,27 @@ eprint = {
   title    = {Optimizing error of high-dimensional statistical queries under differential privacy},
   journal  = {arXiv},
   year     = {2018},
-  doi      = {N/A},
+  url      = {https://arxiv.org/abs/1808.03537},
+  
   keywords = {formal privacy},
 }
+@article{McKenna:2018:OEH:3231751.3242939,
+ author = {McKenna, Ryan and Miklau, Gerome and Hay, Michael and Machanavajjhala, Ashwin},
+ title = {Optimizing Error of High-dimensional Statistical Queries Under Differential Privacy},
+ journal = {Proc. VLDB Endow.},
+ issue_date = {June 2018},
+ volume = {11},
+ number = {10},
+ month = jun,
+ year = {2018},
+ issn = {2150-8097},
+ pages = {1206--1219},
+ numpages = {14},
+ url = {https://doi.org/10.14778/3231751.3231769},
+ doi = {10.14778/3231751.3231769},
+ acmid = {3242939},
+ publisher = {VLDB Endowment},
+} 
 
 @Article{Ding:Telemetry:NIPS:2017,
   author   = {Ding, Bolin and Kulkarni, Janardhan and Yekhanin, Sergey},
@@ -141,7 +159,7 @@ eprint = {
   year     = {2017},
   volume   = {1},
   number   = {8},
-  doi      = {N/A},
+  
   keywords = {formal privacy},
   url      = {https://machinelearning.apple.com/2017/12/06/learning-with-privacy-at-scale.html},
 }
@@ -893,7 +911,7 @@ url = {http://papers.nips.cc/paper/4902-information-theoretic-lower-bounds-for-d
   journal  = {JSM Proceedings, Government Statistics Section},
   year     = {2015},
   pages    = {3061--3075},
-  doi      = {N/A},
+  
   keywords = {value of data, primary},
   language = {English (US)},
   url      = {https://www.ipr.northwestern.edu/publications/papers/2015/ipr-wp-15-05.html},
@@ -2920,9 +2938,9 @@ isbn="978-3-642-31680-7"
   journal  = {ArXiv},
   year     = {2015},
   abstract = {We present a Bayesian model for estimating the joint distribution of multivariate categorical data when units are nested within groups. Such data arise frequently in social science settings, for example, people living in households. The model assumes that (i) each group is a member of a group-level latent class, and (ii) each unit is a member of a unit-level latent class nested within its group-level latent class. This structure allows the model to capture dependence among units in the same group. It also facilitates simultaneous modeling of variables at both group and unit levels. We develop a version of the model that assigns zero probability to groups and units with physically impossible combinations of variables. We apply the model to estimate multivariate relationships in a subset of the American Community Survey. Using the estimated model, we generate synthetic household data that could be disseminated as redacted public use files with high analytic validity and low disclosure risks. Supplementary materials for this article are available online.},
-  doi      = {N/A},
+  
   keywords = {statistical disclosure limitation, SDL},
-  url      = {http://arxiv.org/pdf/1412.2282v3.pdf},
+  url      = {http://arxiv.org/abs/1412.2282v3},
 }
 
 @Article{Hui2006,
@@ -5625,7 +5643,7 @@ url="https://doi.org/10.1007/978-1-4757-3575-8_9"
   year     = {2016},
   month    = {12},
   note     = {\url{https://digitalcommons.ilr.cornell.edu/ldi/32/}},
-  doi      = {N/A},
+  
   keywords = {Official Statistics, primary},
   url      = {https://digitalcommons.ilr.cornell.edu/ldi/32/},
 }
