--- a/library.bib
+++ b/library.bib
@@ -103,6 +103,26 @@ eprint = {
   url      = {https://openscholar.mit.edu/sites/default/files/dept/files/nissim_et_al_-_differential_privacy_primer_for_non-technical_audiences_1.pdf},
 }
 
+@article{WoodVanderbiltJ.Entertain.Technol.Law2018,
+  title = {Differential {{Privacy}}: {{A Primer}} for a {{Non}}-{{Technical Audience}}},
+  journaltitle = {Vanderbilt Journal of Entertainment and Technology Law},
+  author = {Wood, Alexandra and Altman, Micah and Bembenek, Aaron and Bun, Mark and Gaboardi, Marco and Honaker, James and Nissim, Kobbi and O'Brien, David R. and Steinke, Thomas and Vadhan, Salil},
+  number = {1},
+  volume = {21},
+  url = {http://www.jetlaw.org/journal-archives/volume-21/volume-21-issue-1/differential-privacy-a-primer-for-a-non-technical-audience/},
+  shorttitle = {Differential {{Privacy}}},
+  abstract = {Differential privacy is a formal mathematical framework for quantifying and managing privacy risks. It provides provable privacy protection against a wide range of potential attacks, including those currently unforeseen. Differential privacy is primarily studied in the context of the collection, analysis, and release of aggregate statistics. These range from simple statistical estimations, such as averages, to machine learning. Tools for differentially private analysis are now in early stages of implementation and use across a variety of academic, industry, and government settings. Interest in the concept is growing among potential users of the tools, as well as within legal and policy communities, as it holds promise as a potential approach to satisfying legal requirements for privacy protection when handling personal information. In particular, differential privacy may be seen as a technical solution for analyzing and sharing data while protecting the privacy of individuals in accordance with existing legal or policy requirements for de-identification or disclosure limitation.
+
+This primer seeks to introduce the concept of differential privacy and its privacy implications to non-technical audiences. It provides a simplified and informal, but mathematically accurate, description of differential privacy. Using intuitive illustrations and limited mathematical formalism, it discusses the definition of differential privacy, how differential privacy addresses privacy risks, how differentially private analyses are constructed, and how such analyses can be used in practice. A series of illustrations is used to show how practitioners and policymakers can conceptualize the guarantees provided by differential privacy. These illustrations are also used to explain related concepts, such as composition (the accumulation of risk across multiple analyses), privacy loss parameters, and privacy budgets. This primer aims to provide a foundation that can guide future decisions when analyzing and sharing statistical data about individuals, informing individuals about the privacy protection they will be afforded, and designing policies and regulations for robust privacy protection.},
+  urldate = {2019-04-23},
+  date = {2018},
+  file = {Snapshot:/home/vilhuber/Zotero/storage/KBGUU58D/differential-privacy-a-primer-for-a-non-technical-audience.html:text/html}
+}
+
+
+
+
+
 @Misc{commerce.gov_2018,
   author       = {{U.S.~Department of Commerce}},
   title        = {{U.S.\ Department of Commerce Announces Reinstatement of Citizenship Question to the 2020 Decennial Census}},
@@ -1248,6 +1268,7 @@ url = {http://papers.nips.cc/paper/4902-information-theoretic-lower-bounds-for-d
   pages     = {1},
   keywords  = {Statistical Disclosure Limitation, SDL, primary},
   owner     = {vilhuber},
+  url       = {https://www.scb.se/contentassets/ff271eeeca694f47ae99b942de61df83/challenges-to-the-confidentiality-of-u.s.-federal-statistics-1910-1965.pdf},
   timestamp = {2016.08.30},
 }
 
@@ -4384,7 +4405,6 @@ url="https://doi.org/10.1007/978-1-4757-3575-8_9"
   author       = {Cynthia Dwork},
   title        = {The state of the art.},
   howpublished = {Microsoft Research Slide Presentation},
-  doi          = {N/A},
   keywords     = {formal privacy},
   url          = {http://web.mit.edu/bigdata-priv/pdf/Cynthia-Dwork.pdf},
 }
@@ -4392,12 +4412,13 @@ url="https://doi.org/10.1007/978-1-4757-3575-8_9"
 @Article{couper2008risk,
   author    = {Couper, Mick P and Singer, Eleanor and Conrad, Frederick G and Groves, Robert M},
   title     = {Risk of disclosure, perceptions of risk, and concerns about privacy and confidentiality as factors in survey participation},
-  journal   = {Journal of official statistics},
+  journal   = {Journal of Official Statistics},
   year      = {2008},
   volume    = {24},
   number    = {2},
   pages     = {255},
   keywords  = {value of privacy, primary},
+  url       = {https://www.ncbi.nlm.nih.gov/pmc/articles/PMC3096944/},
   publisher = {NIH Public Access},
 }
 
@@ -4527,7 +4548,6 @@ url="https://doi.org/10.1007/978-1-4757-3575-8_9"
   year      = {2016},
   volume    = {abs/1602.07726},
   bibsource = {dblp computer science bibliography, http://dblp.org},
-  doi       = {N/A},
   keywords  = {value of privacy, primary},
   timestamp = {Tue, 01 Mar 2016 17:47:25 +0100},
   url       = {http://arxiv.org/abs/1602.07726},
@@ -4754,11 +4774,9 @@ url="https://doi.org/10.1007/978-1-4757-3575-8_9"
   author    = {Dwork, Cynthia and Feldman, Vitaly and Hardt, Moritz and Pitassi, Toni and Reingold, Omer and Roth, Aaron},
   title     = {Generalization in Adaptive Data Analysis and Holdout Reuse},
   booktitle = {Advances in Neural Information Processing Systems 28},
-  publisher = {Curran Associates, Inc.},
   year      = {2015},
   editor    = {C. Cortes and N. D. Lawrence and D. D. Lee and M. Sugiyama and R. Garnett},
   pages     = {2341--2349},
-  doi       = {N/A},
   keywords  = {value of privacy, primary},
   url       = {http://papers.nips.cc/paper/5993-generalization-in-adaptive-data-analysis-and-holdout-reuse.pdf},
 }
@@ -5608,9 +5626,8 @@ url="https://doi.org/10.1007/978-1-4757-3575-8_9"
   month        = jun,
   year         = {2017},
   note         = {public document in replication archive 10.5281/zenodo.1208758},
-  doi          = {N/A},
   keywords     = {background, primary},
-  url          = {N/A},
+  url          = {http://doi.org/10.5281/zenodo.1345775},
 }
 
 @Misc{Commerce:v:House:1999,
