--- a/index.Rmd
+++ b/index.Rmd
@@ -9,7 +9,7 @@ bibliography: [primary_dynamic.bib]
 link-citations: true
 csl: apa.csl
 ---
-```{r create bib,echo=FALSE}
+```{r create bib,echo=FALSE,include=FALSE}
 source("create_primary.R",echo=TRUE)
 ```
 
