Further fixes to library.bib

--- a/library.bib
+++ b/library.bib
@@ -52,7 +52,6 @@ eprint = {
   institution = {Tax Policy Center, Urban Institute and Brookings Institution},
   year        = {2017},
   month       = {6},
-  doi         = {N/A},
   url         = {https://www.taxpolicycenter.org/sites/default/files/publication/142421/2001396-a-synthetic-income-tax-return-data-file-tentative-work-plan_and_discussion_draft.pdf},
   xurl        = {https://www.taxpolicycenter.org/sites/default/files/publication/142421/2001396-a-synthetic-income-tax-return-data-file-tentative-work-plan_and_discussion_draft.pdf},
 }
@@ -643,7 +642,6 @@ This primer seeks to introduce the concept of differential privacy and its priva
   month      = jan,
   issn       = {1532-4435},
   acmid      = {2946662},
-  doi        = {N/A},
   issue_date = {January 2016},
   keywords   = {estimation, f-divergences, hypothesis testing, information theoretic utilities, local differential privacy, mutual information, privacy-preserving machine learning algorithms, statistical inference, formal privacy},
   numpages   = {51},
@@ -786,7 +784,6 @@ url = {http://papers.nips.cc/paper/4902-information-theoretic-lower-bounds-for-d
   title       = {Environmental externalities and intrahousehold inefficiencies},
   institution = {Northwestern University},
   year        = {2017},
-  doi         = {N/A},
   url         = {https://sites.tufts.edu/kjack/files/2017/08/Intrahh-water-draft-v15.pdf},
 }
 
@@ -809,7 +806,6 @@ url = {http://papers.nips.cc/paper/4902-information-theoretic-lower-bounds-for-d
   address   = {Cornell University},
   month     = jan,
   booktitle = {Proceedings from the 2016 {NSF-Sloan} {Workshop on Practical Privacy}},
-  doi       = {N/A},
   keywords  = {official statistics, primary},
   url       = {https://digitalcommons.ilr.cornell.edu/ldi/33/},
 }
@@ -943,7 +939,6 @@ url = {http://papers.nips.cc/paper/4902-information-theoretic-lower-bounds-for-d
   title       = {{2015 American Community Survey 1-Year Estimates}},
   institution = {{U.S. Census Bureau}},
   year        = {2015},
-  doi         = {N/A},
   url         = {https://factfinder.census.gov/faces/tableservices/jsf/pages/productview.xhtml?pid=ACS_15_1YR_S2601A&prodType=table},
 }
 
@@ -974,7 +969,6 @@ url = {http://papers.nips.cc/paper/4902-information-theoretic-lower-bounds-for-d
   year         = {2016},
   type         = {[Computer file]},
   date         = {2016-09-30},
-  doi          = {N/A},
   howpublished = {Computer file},
   url          = {http://ihis.us/},
 }
@@ -986,7 +980,6 @@ url = {http://papers.nips.cc/paper/4902-information-theoretic-lower-bounds-for-d
   year         = {2016},
   type         = {[Computer file]},
   date         = {2016-08-19},
-  doi          = {N/A},
   howpublished = {Computer file},
   url          = {http://www2.census.gov/programs-surveys/acs/data/pums/2014/5-Year/},
 }
@@ -1104,7 +1097,6 @@ url = {http://papers.nips.cc/paper/4902-information-theoretic-lower-bounds-for-d
   year        = {2017},
   type        = {Document},
   number      = {37},
-  doi         = {N/A},
   keywords    = {Economics of Privacy},
   owner       = {vilhuber},
   timestamp   = {2018.01.30},
@@ -1516,11 +1508,10 @@ should be a standard part of algorithms courses, like "divide and conquer."},
 }
 
 @Article{Center2014,
-  author    = {Center, Pew Research},
+  author    = {{Pew Research Center}},
   title     = {{Public Perceptions of Privacy and Security}},
   journal   = {Pew Research Center},
   year      = {2014},
-  doi       = {N/A},
   keywords  = {value of privacy},
   owner     = {vilhuber},
   timestamp = {2016.08.30},
@@ -1659,7 +1650,6 @@ should be a standard part of algorithms courses, like "divide and conquer."},
   number    = {3},
   pages     = {12--21},
   note      = {Summer},
-  doi       = {N/A},
   isbn      = {6123402366},
   owner     = {vilhuber},
   timestamp = {2016.08.30},
@@ -1808,12 +1798,10 @@ should be a standard part of algorithms courses, like "divide and conquer."},
   year      = {1998},
   pages     = {351--362},
   abstract  = {Statistical information can be provided while preserving a specified$\backslash$nlevel of confidentiality protection. The general approach is to provide$\backslash$ndisclosure-limited data that maximizes its statistical utility subject$\backslash$nto confidentiality constraints. Disclosure limitation based on Markov$\backslash$nchain methods that respect the underlying uncertainty in real data$\backslash$nis examined.},
-  doi       = {N/A},
   keywords  = {confidentiality,data access,data security,hierarchical,markov chains,models,perturbation methods,simulated data, statistical disclosure limitation, SDL},
   owner     = {vilhuber},
   timestamp = {2016.08.30},
-  url       = {https://www.researchgate.net/profile/George_Duncan/publication/228558388_Obtaining_information_while_preserving_privacy_A_Markov_perturbation_method_for_tabular_data/links/02e7e52843fc38389f000000.pdf},
-}
+  }
 
 @InCollection{duncan:etal:2001,
   author    = {Duncan, G.T. and Fienberg, S.E. and Krishnan, R. and Padman, R. and Roehrig, S.F.},
@@ -1823,11 +1811,10 @@ should be a standard part of algorithms courses, like "divide and conquer."},
   year      = {2001},
   editor    = {P. Doyle and J. Lane and J. Theeuwes and L. Zayatz},
   pages     = {135--166},
-  doi       = {N/A},
   keywords  = {statistical disclosure limitation, SDL},
   owner     = {John Abowd},
   timestamp = {2014.12.19},
-  url       = {https://s3.amazonaws.com/academia.edu.documents/30788537/duncan-lanechapter.pdf?AWSAccessKeyId=AKIAIWOWYYGZ2Y53UL3A&Expires=1549498342&Signature=XhGYpql8%2FuQL9gPDYFPnAyU3nRo%3D&response-content-disposition=inline%3B%20filename%3DDisclosure_limitation_methods_and_inform.pdf},
+  
 }
 
 @Article{Duncan:Risk:JBES:1989,
@@ -1890,11 +1877,10 @@ should be a standard part of algorithms courses, like "divide and conquer."},
   year         = {1999},
   pages        = {351--362},
   organization = {Eurostat},
-  doi          = {N/A},
   keywords     = {statistical disclosure limitation, SDL},
   owner        = {John Abowd},
   timestamp    = {2014.12.19},
-  url          = {https://www.researchgate.net/profile/George_Duncan/publication/228558388_Obtaining_information_while_preserving_privacy_A_Markov_perturbation_method_for_tabular_data/links/02e7e52843fc38389f000000.pdf},
+  
 }
 
 @Book{Duncan1993,
@@ -1943,7 +1929,6 @@ should be a standard part of algorithms courses, like "divide and conquer."},
   journal   = {Proceedings of the International Colloquium on Automata, Languages and Programming (ICALP)},
   year      = {2006},
   pages     = {1--12},
-  doi       = {N/A},
   keywords  = {formal privacy},
   owner     = {John Abowd},
   timestamp = {2014.12.18},
@@ -1958,7 +1943,6 @@ should be a standard part of algorithms courses, like "divide and conquer."},
   pages     = {1--12},
   issn      = {0302-9743},
   abstract  = {. In 1977 Dalenius articulated a desideratum for statistical databases: nothing about an individual should be learnable from the database that cannot be learned without access to the database. We give a general impossibility result showing that a formalization of Dalenius' goal along the lines of semantic security cannot be achieved. Contrary to intuition, a variant of the result threatens the privacy even of someone not in the database. This state of affairs suggests a new measure, differential privacy, which, intuitively, captures the increased risk to one's privacy incurred by participating in a database. The techniques developed in a sequence of papers [8, 13, 3], culminating in those described in [12], can achieve any desired level of privacy under this measure. In many cases, extremely accurate information about the database can be provided while simultaneously ensuring very high levels of privacy. 1},
-  doi       = {N/A},
   isbn      = {3-540-35907-9},
   keywords  = {formal privacy},
   owner     = {vilhuber},
@@ -2165,7 +2149,6 @@ should be a standard part of algorithms courses, like "divide and conquer."},
  databases) and vertically partitioned databases, in which different subsets of
  attributes are stored in different databases. In addition, we show how to use our
  techniques for datamining on published noisy statistics.</p>},
-  doi       = {N/A},
   keywords  = {formal privacy},
   owner     = {John Abowd},
   timestamp = {2015.07.01},
@@ -2181,7 +2164,6 @@ should be a standard part of algorithms courses, like "divide and conquer."},
   pages     = {528--544},
   issn      = {0302-9743},
   abstract  = {In a recent paper Dinur and Nissim considered a statistical database in which a trusted database administrator monitors queries and introduces noise to the responses with the goal of maintaining data privacy [5]. Under a rigorous definition of breach of privacy, Dinur and Nissim proved that unless the total number of queries is sub-linear in the size of the database, a substantial amount of noise is required to avoid a breach, rendering the database almost useless. As databases grow increasingly large, the possibility of being able to query only a sub-linear number of times becomes realistic. We further investigate this situation, generalizing the previous work in two impor- tant directions: multi-attribute databases (previous work dealt only with single-attribute databases) and vertically partitioned databases, in which different subsets of attributes are stored in different databases. In addi- tion, we show how to use our techniques for datamining on published noisy statistics.},
-  doi       = {N/A},
   isbn      = {3540226680},
   keywords  = {data mining,data privacy,statistical databases,vertically parti-, formal privacy},
   owner     = {vilhuber},
@@ -2213,7 +2195,6 @@ should be a standard part of algorithms courses, like "divide and conquer."},
   volume    = {abs/1603.01887},
   bibsource = {dblp computer science bibliography, http://dblp.org},
   biburl    = {http://dblp.uni-trier.de/rec/bib/journals/corr/DworkR16},
-  doi       = {N/A},
   keywords  = {formal privacy},
   timestamp = {Sat, 02 Apr 2016 11:49:48 +0200},
   url       = {http://arxiv.org/abs/1603.01887},
@@ -2377,19 +2358,6 @@ isbn="978-3-642-31680-7"
 }
 
 
-@TechReport{FCSM:2005,
-  author      = {{Federal~Committee~on~Statistical~Methodology}},
-  title       = {Report on statistical disclosure limitation methodology},
-  institution = {Statistical and Science Policy, Office of Information and Regulatory Affairs, Office of Management and Budget},
-  year        = {2005},
-  month       = {12},
-  doi         = {N/A},
-  keywords    = {statistical disclosure limitation, SDL},
-  owner       = {John Abowd},
-  timestamp   = {2014.12.27},
-  url         = {N/A},
-  xurlx       = {https://fcsm.sites.usa.gov/files/2014/04/spwp22.pdf},
-}
 
 @Article{Fellegi:1972,
   author    = {Fellegi, I. P.},
@@ -2408,7 +2376,7 @@ isbn="978-3-642-31680-7"
   owner     = {vilhuber},
   publisher = {American Statistical Association},
   timestamp = {2016.08.30},
-  url       = {https://amstat.tandfonline.com/doi/abs/10.1080/01621459.1972.10481199#.XFuE8VxKg2w},
+  url       = {https://amstat.tandfonline.com/doi/abs/10.1080/01621459.1972.10481199},
   xurlx     = {http://www.jstor.org/stable/2284695},
 }
 
@@ -2666,7 +2634,6 @@ isbn="978-3-642-31680-7"
   number        = {3},
   pages         = {415--426},
   archiveprefix = {arXiv},
-  doi           = {N/A},
   owner         = {vilhuber},
   timestamp     = {2016.08.30},
   url           = {http://www.jstor.org/stable/1812111},
@@ -2749,7 +2716,6 @@ isbn="978-3-642-31680-7"
   year      = {2010},
   volume    = {abs/1012.4763},
   bibsource = {DBLP, http://dblp.uni-trier.de},
-  doi       = {N/A},
   ee        = {http://arxiv.org/abs/1012.4763},
   owner     = {vilhuber},
   timestamp = {2016.08.30},
@@ -2972,7 +2938,6 @@ isbn="978-3-642-31680-7"
   year      = {2006},
   pages     = {471--493},
   abstract  = {Privacy of personal information is an area of growing concern and importance in the digital age. Privacy as an issue rises when there is a conflict of interest between its commercial value and respect for an individual's right to privacy. This tends itself to the fact this trade off is of economic value and the issue of privacy is an economic problem and hence justifies the emergence of the economics of privacy as an important discipline which is a complex interplay of regulation, technology and people dynamics and the efficiency of doing business. In this survey paper we look into the work done by eminent people on the issue of privacy and its relationship with people, technology and regulation from an economic perspective and its increasing relevance today. Privacy affects each one of us in some way that we cannot afford to ignore it and it helps to be in cognizance of what is going on around us.},
-  doi       = {N/A},
   keywords  = {economics of privacy},
   owner     = {vilhuber},
   timestamp = {2016.08.30},
@@ -3544,7 +3509,6 @@ We provide a formal analysis of the error of query answers produced by the mecha
   institution = {arxiv.org},
   year        = {2016},
   abstract    = {We provide a general framework for privacy-preserving variational Bayes (VB) for a large class of probabilistic models, called the conjugate exponential (CE) family. Our primary observation is that when models are in the CE family, we can privatise the variational posterior distributions simply by perturbing the expected sufficient statistics of the complete-data likelihood. For widely used non-CE models with binomial likelihoods, we exploit the P{\'o}lya-Gamma data augmentation scheme to bring such models into the CE family, such that inferences in the modified model resemble the private variational Bayes algorithm as closely as possible. The iterative nature of variational Bayes presents a further challenge since iterations increase the amount of noise needed. We overcome this by combining: (1) a relaxed notion of differential privacy, called concentrated differential privacy, which provides a tight bound on the privacy cost of multiple VB iterations and thus significantly decreases the amount of additive noise; and (2) the privacy amplification effect of subsampling mini-batches from large-scale data in stochastic learning. We empirically demonstrate the effectiveness of our method in CE and non-CE models including latent Dirichlet allocation, Bayesian logistic regression, and sigmoid belief networks, evaluated on real-world datasets.},
-  doi         = {N/A},
   keywords    = {formal privacy},
   url         = {https://arxiv.org/abs/1611.00340},
 }
@@ -3839,7 +3803,6 @@ instead of a hierarchy.},
   volume    = {abs/1507.02482},
   bibsource = {dblp computer science bibliography, http://dblp.org},
   biburl    = {http://dblp.uni-trier.de/rec/bib/journals/corr/Sheffet15a},
-  doi       = {N/A},
   keywords  = {formal privacy},
   owner     = {vilhuber},
   timestamp = {Sun, 02 Aug 2015 18:42:02 +0200},
@@ -3888,11 +3851,10 @@ instead of a hierarchy.},
 }
 
 @TechReport{Stephens-davidowitz2015,
-  author    = {Stephens-davidowitz, Seth and Hal Varian},
+  author    = {Stephens-Davidowitz, Seth and Hal Varian},
   title     = {{A Hands-on Guide to Google Data}},
   year      = {2015},
   pages     = {1--25},
-  doi       = {N/A},
   owner     = {vilhuber},
   timestamp = {2016.08.30},
   institution = {Google, Inc.},
@@ -4150,7 +4112,6 @@ url="https://doi.org/10.1007/978-1-4757-3575-8_9"
   arxivid       = {1502.07645},
   journal = {arXiv},
   comment       = {See version 2 in library},
-  doi           = {N/A},
   eprint        = {1502.07645},
   file          = {:http\://arxiv.org/pdf/1502.07645v2.pdf:URL},
   keywords      = {formal privacy},
@@ -4334,7 +4295,6 @@ url="https://doi.org/10.1007/978-1-4757-3575-8_9"
   month = {6},
   year  = {2016},
   note  = {Cited on March 5, 2017},
-  doi   = {N/A},
   url   = {http://www.apple.com/newsroom/2016/06/apple-previews-ios-10-biggest-ios-release-ever.html},
 }
 
@@ -4346,7 +4306,7 @@ url="https://doi.org/10.1007/978-1-4757-3575-8_9"
   series    = {Committee on National Statistics},
   address   = {Washington, DC},
   isbn      = {978-0-309-45428-5},
-  doi       = {doi: 10.17226/24652},
+  doi       = {10.17226/24652},
   keywords  = {official statistics, primary},
   url       = {https://www.nap.edu/catalog/24652/innovations-in-federal-statistics-combining-data-sources-while-protecting-privacy},
 }
@@ -4590,7 +4550,6 @@ url="https://doi.org/10.1007/978-1-4757-3575-8_9"
   year      = {2015},
   volume    = {abs/1506.03489},
   bibsource = {dblp computer science bibliography, http://dblp.org},
-  doi       = {N/A},
   keywords  = {formal privacy},
   timestamp = {Wed, 01 Jul 2015 15:10:24 +0200},
   url       = {http://arxiv.org/abs/1506.03489},
@@ -4635,7 +4594,6 @@ url="https://doi.org/10.1007/978-1-4757-3575-8_9"
   year        = {2017},
   abstract    = {This document is a primer on differential privacy, which is a formal mathematical framework for guaranteeing privacy protection when analyzing or releasing statistical data. Recently emerging from the theoretical computer science literature, differential privacy is now in initial stages of implementation and use in various academic, industry, and government settings. Using intuitive illustrations and limited mathematical formalism, this document provides an introduction to differential privacy for non-technical practitioners, who are increasingly tasked with making decisions with respect to differential privacy as it grows more widespread in use. In particular, the examples in this document illustrate ways in which social scientists can conceptualize the guarantees provided by differential privacy with respect to the decisions they make when managing personal data about research subjects and informing them about the privacy protection they will be afforded.\&nbsp;\&nbsp;},
   address     = {Cambridge, MA},
-  doi         = {N/A},
   type = {primer},
   institution = {a product of the "Bridging Privacy Definitions" working group, part of the Privacy Tools for Sharing Research Data project at Harvard University},
   url         = {https://privacytools.seas.harvard.edu/files/privacytools/files/pedagogical-document-dp_new.pdf},
@@ -4723,7 +4681,6 @@ url="https://doi.org/10.1007/978-1-4757-3575-8_9"
   title        = {Interviewing by texting: costs, efficiency, and data quality.},
   howpublished = {In 69th annual conference of the American Association for Public Opinion Research},
   year         = {2014},
-  doi          = {N/A},
   url          = {N/A},
 }
 
@@ -4765,7 +4722,6 @@ url="https://doi.org/10.1007/978-1-4757-3575-8_9"
   volume    = {abs/1506.02629},
   bibsource = {dblp computer science bibliography, http://dblp.org},
   biburl    = {http://dblp.uni-trier.de/rec/bib/journals/corr/DworkFHPRR15},
-  doi       = {N/A},
   keywords  = {value of privacy},
   timestamp = {Wed, 01 Jul 2015 15:10:24 +0200},
   url       = {http://arxiv.org/abs/1506.02629},
@@ -4837,7 +4793,6 @@ url="https://doi.org/10.1007/978-1-4757-3575-8_9"
   volume    = {abs/1603.01508},
   bibsource = {dblp computer science bibliography, http://dblp.org},
   biburl    = {http://dblp.uni-trier.de/rec/bib/journals/corr/GhoshK16},
-  doi       = {N/A},
   keywords  = {formal privacy},
   timestamp = {Sat, 02 Apr 2016 11:49:48 +0200},
   url       = {http://arxiv.org/abs/1603.01508},
@@ -4877,7 +4832,6 @@ url="https://doi.org/10.1007/978-1-4757-3575-8_9"
   howpublished = {Cabinet Office, HM Treasury, The Rt Hon Matt Hancock, and The Rr Hon George Osborne},
   month        = {3},
   year         = {2016},
-  doi          = {N/A},
   keywords     = {official statistics},
   url          = {https://www.gov.uk/government/publications/independent-review-of-uk-economic-statistics-final-report},
 }
@@ -5083,7 +5037,6 @@ url="https://doi.org/10.1007/978-1-4757-3575-8_9"
   archiveprefix = {arXiv},
   bibsource     = {dblp computer science bibliography, http://dblp.org},
   biburl        = {http://dblp.org/rec/bib/journals/corr/abs-1710-09295},
-  doi           = {N/A},
   eprint        = {1710.09295},
   keywords      = {formal privacy},
   timestamp     = {Thu, 02 Nov 2017 14:25:36 +0100},
@@ -5251,7 +5204,6 @@ url="https://doi.org/10.1007/978-1-4757-3575-8_9"
   institution = {National Center for Education Statistics},
   year        = {2016},
   month       = jan,
-  doi         = {N/A},
   keywords    = {policy},
   url         = {https://nces.ed.gov/surveys/AnnualReports/pdf/titleI20160111.pdf},
 }
@@ -5264,7 +5216,6 @@ url="https://doi.org/10.1007/978-1-4757-3575-8_9"
   type         = {[Computer file]},
   number       = {v.1a},
   date         = {2016-08-19},
-  doi          = {N/A},
   howpublished = {Computer file},
   url          = {N/A},
 }
@@ -5297,7 +5248,6 @@ url="https://doi.org/10.1007/978-1-4757-3575-8_9"
   howpublished = {{R}esolution of the {A}ssembly {A/RES/68/261}},
   month        = {3},
   year         = {2014},
-  doi          = {N/A},
   keywords     = {policy},
   url          = {https://unstats.un.org/unsd/dnss/gp/FP-New-E.pdf},
 }
@@ -5317,7 +5267,6 @@ url="https://doi.org/10.1007/978-1-4757-3575-8_9"
   institution = {Government Printing Office},
   year        = {2017},
   month       = {9},
-  doi         = {N/A},
   keywords    = {policy},
   url         = {https://www.cep.gov/content/dam/cep/report/cep-final-report.pdf},
 }
@@ -5407,7 +5356,6 @@ url="https://doi.org/10.1007/978-1-4757-3575-8_9"
   month        = aug,
   year         = {2014},
   note         = {Accessed: March 13, 2018},
-  doi          = {N/A},
   keywords     = {official statistics},
   url          = {https://grants.nih.gov/grants/guide/notice-files/NOT-OD-14-124.html},
 }
@@ -5511,7 +5459,6 @@ url="https://doi.org/10.1007/978-1-4757-3575-8_9"
   month        = jan,
   year         = {2017},
   note         = {Accessed on July 31, 2018},
-  doi          = {N/A},
   url          = {https://users.nber.org/~taxsim/gdb/},
 }
 
@@ -5522,7 +5469,6 @@ url="https://doi.org/10.1007/978-1-4757-3575-8_9"
   month        = jan,
   year         = {2017},
   note         = {Accessed on March 21, 2018},
-  doi          = {N/A},
   keywords     = {policy},
   url          = {https://obamawhitehouse.archives.gov/sites/default/files/omb/memoranda/2017/m-17-12_0.pdf},
 }
@@ -5533,7 +5479,6 @@ url="https://doi.org/10.1007/978-1-4757-3575-8_9"
   howpublished = {\url{https://www.irs.gov/pub/irs-soi/12otproductswinbul.pdf}},
   year         = {2018},
   note         = {Accessed on July 31, 2018},
-  doi          = {N/A},
   url          = {https://www.irs.gov/pub/irs-soi/12otproductswinbul.pdf},
 }
 
@@ -5544,7 +5489,6 @@ url="https://doi.org/10.1007/978-1-4757-3575-8_9"
   month        = feb,
   year         = {2014},
   note         = {Accessed on March 21, 2018},
-  doi          = {N/A},
   keywords     = {policy},
   url          = {https://www2.census.gov/foia/ds_policies/ds022.pdf},
 }
@@ -5673,7 +5617,6 @@ url="https://doi.org/10.1007/978-1-4757-3575-8_9"
   year        = {2017},
   month       = sep,
   note        = {\url{https://www.census.gov/about/cac/sac/meetings/2017-09-meeting.html} (Cited on March 22, 2018)},
-  doi         = {N/A},
   keywords    = {policy},
   url         = {https://www.census.gov/about/cac/sac/meetings/2017-09-meeting.html},
 }
