Corrected a few references URL

--- a/library.bib
+++ b/library.bib
@@ -3214,7 +3214,7 @@ We provide a formal analysis of the error of query answers produced by the mecha
   keywords  = {information goods,price discrimination,pricing, value of data},
   owner     = {vilhuber},
   timestamp = {2016.08.30},
-  url       = {http://www.mendeley.com/catalog/pricing-information-goods/$\backslash$nhttp://amitre.synthasite.com/resources/varian{\_}Hal{\_}price-info-goods.pdf},
+  url       = {http://amitre.synthasite.com/resources/varian_Hal_price-info-goods.pdf},
 }
 
 @Article{Little2004,
@@ -4005,7 +4005,7 @@ instead of a hierarchy.},
   doi       = {10.1145/331403.331404},
   owner     = {vilhuber},
   timestamp = {2016.08.30},
-  url      = {http://people.ischool.berkeley.edu/{~}hal/Papers/sigir/sigir.pdf},
+  url      = {http://people.ischool.berkeley.edu/~hal/Papers/sigir/sigir.pdf},
 }
 
 @InCollection{Varian1999a,
@@ -4056,7 +4056,7 @@ url="https://doi.org/10.1007/978-1-4757-3575-8_9"
   keywords  = {books,d4,information,jel classification numbers,l86,l96,libraries, value of data},
   owner     = {vilhuber},
   timestamp = {2016.08.30},
-  url       = {http://onlinelibrary.wiley.com/doi/10.1111/1467-6451.00133/full$\backslash$nhttp://doi.wiley.com/10.1111/1467-6451.00133},
+  url       = {http://onlinelibrary.wiley.com/doi/10.1111/1467-6451.00133},
 }
 
 %%%% ERROR
@@ -4073,7 +4073,7 @@ url="https://doi.org/10.1007/978-1-4757-3575-8_9"
   keywords  = {value of data, primary},
   owner     = {vilhuber},
   timestamp = {2016.08.30},
-  url       = {http://people.ischool.berkeley.edu/{~}hal/Papers/japan/index.html},
+  url       = {http://people.ischool.berkeley.edu/~hal/Papers/japan/index.html},
 }
 
 @Article{Varian1997,
