Light edits to index.Rmd
Edited the contributions section with some light wordsmithing

--- a/index.Rmd
+++ b/index.Rmd
@@ -28,7 +28,7 @@ We have organized these references into a reading course focused on 10-15 primar
 In the remainder of this document, for each topic, we provide a very brief description of the papers in the reading course and why we selected them. In each case, we orient the reader to the key issues, concepts, and tools in each topic. `r if (knitr::is_html_output()) 'All references are repeated in the global [References] section.'` In addition to this reading course, we have also curated a much more extensive list of references, [available here](sloan-privacy-bibliography.pdf).
 
 ## Contributing
-We encourage interested readers and researchers to use these readings for their classes and training, modifying it as needed. We encourage users to fork this document at [https://github.com/labordynamicsinstitute/privacy-bibliography](https://github.com/labordynamicsinstitute/privacy-bibliography). This document is licensed under the [Creative Commons Attribution-NonCommercial 4.0 International Public License  (CC BY-NC 4.0)](https://creativecommons.org/licenses/by-nc/4.0/). Should that license not meet your needs, contact us. We would appreciate it if any improvements, corrections, and other contributions were sent back to us, for instance via the "[Issues](https://github.com/labordynamicsinstitute/privacy-bibliography/issues)" feature on 
+We encourage interested readers and researchers to use these readings for their classes and training, modifying it as needed. You can fork the source code at [https://github.com/labordynamicsinstitute/privacy-bibliography](https://github.com/labordynamicsinstitute/privacy-bibliography). This document is licensed under the [Creative Commons Attribution-NonCommercial 4.0 International Public License  (CC BY-NC 4.0)](https://creativecommons.org/licenses/by-nc/4.0/). Should that license not meet your needs, contact us to discuss possible modifications or exemption. Please send us any improvements, corrections, or other contributions, either by e-mail, or via the "[Issues](https://github.com/labordynamicsinstitute/privacy-bibliography/issues)" feature on 
 Github`r if (knitr::is_html_output()) ', or by clicking on the edit button in the toolbar above'`. 
 
 ## Support 
